--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 <link rel="stylesheet" href="https://staticinstapaper.s3.amazonaws.com/stylesheets/main.min.css"/>
 
 </head>
-<body class="preload unread_mode 
-expanded
- thumbnails
- lightmode">
+<body>
 
 <div id="page_header" class="page_header">
 
@@ -322,408 +319,39 @@ More <span class="ipicon ipicon-triangle"></span>
 <div class="row">
 <div class="col-lg-2 hidden-md hidden-sm hidden-xs"></div>
 
-
 <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12">
-
 <div id="main_content" class="main_content">
-<div class="hidden-lg hidden-md hidden-sm visible-xs">
-
-<div id="search_box" class="search_box " aria-label="Search">
-<div id="search_available" class="search_available mode_active ">
-
-<span class="ipicon ipicon-search"></span>
-<form action="/search" method="get">
-
-
-<input type="text" autocomplete="off" class="search_query_field" id="searcher" name="q" placeholder="Search" value="">
-
-</form>
-
-</div>
-
-<div id="multi_actions_available" class="multi_actions_available">
-<nav class="multi_actions">
-
-<a href="javascript:void(0);"
-title="Archive selected articles"
-class="js_batch"
-data-action="archive"><span class="ipicon ipicon-archive"></span> Archive</a>
-
-<a class="js_popover js_move_batch_popover"
-id="batch_move_action"
-data-target="#move_menu_batch"
-data-bodystate="move_batch_popover"
-data-container="#page_header"
-data-placement="bottom"
-title="Move selected to folder"
-alt="Move selected to folder"
-href="javascript:void(0);">
-<span class="ipicon ipicon-folder"></span>
-Move
-</a>
-<!-- Batch Move Folder Standalone Dropdown -->
-<div id="move_menu_batch" class="popover_menu_wrapper">
-<div class="move_popover popover_menu">
-<div class="menu_group_name">MOVE</div>
-
-
-</div>
-</div>
-<a href="javascript:void(0);"
-title="Permanently delete selected articles"
-class="js_batch"
-data-action="delete">
-<span class="ipicon ipicon-delete"></span> Delete
-</a>
-</nav>
-<aside id="multi_select_count" class="multi_select_count hidden">
-<span id="multi_select_count_value" class="multi_select_count_value"></span> selected
-&nbsp;
-<a href="javascript:void(0);"
-title="Select all articles"
-class="js_select_all_articles">all</a>
-<b>&middot;</b>
-<a href="javascript:void(0);"
-title="Deselect all articles"
-class="js_deselect_all_articles">cancel</a>
-</aside>
-</div>
-</div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div id="upsell_banner" class="flash flash_info">
-Instapaper service fully recovered. <a href="http://blog.instapaper.com/post/157227609796">Learn More »</a>
-<button type="button" class="js_close js_info_close close" data-dismiss-target="#upsell_banner" aria-hidden="true">&times;</button>
-</div>
-
-
-<div id="article_list"
-class="article_list expanded_view ">
-<section class="articles" aria-label="Articles">
-
-
-
-
-
-
-<article id="article_875348085"
-class="js_article_item article_item  "
-draggable="true"
-data-article-id="875348085"
-data-unread-href="/mark_unread/875348085"
-data-selected="false"
-data-archive-href="/skip/875348085">
-<aside class="article_selected_indicator" data-content="&#10003;" aria-hidden="true"></aside>
-<a class="hidden" href="/read/875348085" aria-hidden="false" aria-label="Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments">
-Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments
-</a>
-<div class="article_inner_item" aria-hidden="true">
-<div class="article_text_meta ">
-
-<div class="js_title_row title_row" draggable="false">
-<a class="article_title" href="/read/875348085" title="Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments">
-Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments
-</a>
-
-
-
-<a class="js_bookmark_edit action_link bookmark_edit_link muted open_modal android_hide"
-href="javascript:void(0);"
-data-modal="bookmark_edit_modal"
-data-article-id="875348085"
-data-title="Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments"
-data-url="https://www.amazon.com/Yamaha-P115B-Digital-Piano-Stand/dp/B017TXC0JE"
-data-selection="Share Facebook Twitter Pinterest Qty: Qty: 1 Include Protect your purchase: Include for $89.99 Include for $67.14 4 Year Asurion Musical Instrument Accident">Edit</a>
-
-</div>
-<div class="title_meta">
-<span class="host">
-<a class="js_domain_linkout" href="https://www.amazon.com/Yamaha-P115B-Digital-Piano-Stand/dp/B017TXC0JE">
-
-amazon.com
-
-</a>
-</span>
-<span class="author">
-
-&middot; by Tony J.
-
-</span>
-
-<aside class="condensed_meta">
-&middot;
-<span class="meta_date">Today</span>
-
-&middot;
-<span class="meta_read_time">
-
-7 of 12 min remaining
-
-</span>
-
-</aside>
-</div>
-<div class="article_preview">
-Share Facebook Twitter Pinterest Qty: Qty: 1 Include Protect your purchase: Include for $89.99 Include for $67.14 4 Year Asurion Musical Instrument Accident…
-</div>
-<div class="article_item_footer">
-<div class="meta">
-<aside class="meta_item starred_on">
-<span class="ipicon ipicon-liked-on"></span>
-</aside>
-<span class="meta_item meta_date">
-Today
-</span>
-
-<span class="meta_item meta_read_time">
-&middot;
-
-7 of 12 min remaining
-
-</span>
-
-</div>
-<div class="article_actions">
-
-
-<a href="/star_toggle/875348085"
-title="Like "
-class="action_link star_toggle ">
-<span class="ipicon ipicon-liked-on"></span>
-<span class="ipicon ipicon-liked-off"></span>
-</a>
-
-
-
-
-
-<a class="js_archive_single action_link"
-href="/skip/875348085"
-data-href="/skip/875348085"
-title="Archive"
-data-article-id="875348085"
-id="skip875348085">
-<span class="ipicon ipicon-archive"></span>
-</a>
-
-
-
-<a id="delete875348085"
-class="js_delete_single action_link"
-title="Permanently Delete"
-data-article-id="875348085"
-href="/delete/875348085">
-<span class="ipicon ipicon-delete"></span>
-</a>
-
-
-<a class="js_popover action_link"
-href="#"
-title="Share"
-data-placement="bottom"
-data-target="#share_actions_875348085"
-data-container="#main_content"
-data-bodystate="share_actions_popover">
-<span class="ipicon ipicon-share"></span>
-</a>
-<div id="share_actions_875348085" class="popover_menu_wrapper">
-<ul class="list_reset popover_menu">
-<li class="menu_group_name">Share</li>
-
-
-
-
-
-
-<li>
-<a class="menu_item"
-title="Share via Email"
-href="mailto:?subject=Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments&amp;body=Amazon.com: Yamaha P115B Digital Piano with Stand and Bench: Musical Instruments%0Ahttps%3A%2F%2Fwww.amazon.com%2FYamaha-P115B-Digital-Piano-Stand%2Fdp%2FB017TXC0JE%0A%0A(via%20Instapaper)">Email</a>
-</li>
-</ul>
-</div> 
-</div>
-</div>
-
-
-</div>
-</article>
-
-
-
-
-
-
-<article id="article_875219660"
-class="js_article_item article_item  "
-draggable="true"
-data-article-id="875219660"
-data-unread-href="/mark_unread/875219660"
-data-selected="false"
-data-archive-href="/skip/875219660">
-<aside class="article_selected_indicator" data-content="&#10003;" aria-hidden="true"></aside>
-<a class="hidden" href="/read/875219660" aria-hidden="false" aria-label="Welcome to Instapaper!">
-Welcome to Instapaper!
-</a>
-<div class="article_inner_item" aria-hidden="true">
-<div class="article_text_meta article_has_image">
-
-<div class="js_title_row title_row" draggable="false">
-<a class="article_title" href="/read/875219660" title="Welcome to Instapaper!">
-Welcome to Instapaper!
-</a>
-
-
-
-<a class="js_bookmark_edit action_link bookmark_edit_link muted open_modal android_hide"
-href="javascript:void(0);"
-data-modal="bookmark_edit_modal"
-data-article-id="875219660"
-data-title="Welcome to Instapaper!"
-data-url="http://blog.instapaper.com/private/85060389946/tumblr_n585uton3C1qz8fxi"
-data-selection="Instapaper is the best way to save and read web content. There are a number of convenient ways to save articles to Instapaper. Let's walkthrough your options...">Edit</a>
-
-</div>
-<div class="title_meta">
-<span class="host">
-<a class="js_domain_linkout" href="http://blog.instapaper.com/private/85060389946/tumblr_n585uton3C1qz8fxi">
-
-blog.instapaper.com
-
-</a>
-</span>
-<span class="author">
-
-</span>
-
-<aside class="condensed_meta">
-&middot;
-<span class="meta_date">Yesterday</span>
-
-&middot;
-<span class="meta_read_time">
-
-1 min read
-
-</span>
-
-</aside>
-</div>
-<div class="article_preview">
-Instapaper is the best way to save and read web content. There are a number of convenient ways to save articles to Instapaper. Let's walkthrough your options...
-</div>
-<div class="article_item_footer">
-<div class="meta">
-<aside class="meta_item starred_on">
-<span class="ipicon ipicon-liked-on"></span>
-</aside>
-<span class="meta_item meta_date">
-Yesterday
-</span>
-
-<span class="meta_item meta_read_time">
-&middot;
-
-1 min
-
-</span>
-
-</div>
-<div class="article_actions">
-
-
-<a href="/star_toggle/875219660"
-title="Like "
-class="action_link star_toggle ">
-<span class="ipicon ipicon-liked-on"></span>
-<span class="ipicon ipicon-liked-off"></span>
-</a>
-
-
-
-
-
-<a class="js_archive_single action_link"
-href="/skip/875219660"
-data-href="/skip/875219660"
-title="Archive"
-data-article-id="875219660"
-id="skip875219660">
-<span class="ipicon ipicon-archive"></span>
-</a>
-
-
-
-<a id="delete875219660"
-class="js_delete_single action_link"
-title="Permanently Delete"
-data-article-id="875219660"
-href="/delete/875219660">
-<span class="ipicon ipicon-delete"></span>
-</a>
-
-
-<a class="js_popover action_link"
-href="#"
-title="Share"
-data-placement="top"
-data-target="#share_actions_875219660"
-data-container="#main_content"
-data-bodystate="share_actions_popover">
-<span class="ipicon ipicon-share"></span>
-</a>
-<div id="share_actions_875219660" class="popover_menu_wrapper">
-<ul class="list_reset popover_menu">
-<li class="menu_group_name">Share</li>
-
-
-
-
-
-
-<li>
-<a class="menu_item"
-title="Share via Email"
-href="mailto:?subject=Welcome to Instapaper!&amp;body=Welcome to Instapaper!%0Ahttp%3A%2F%2Fblog.instapaper.com%2Fprivate%2F85060389946%2Ftumblr_n585uton3C1qz8fxi%0A%0A(via%20Instapaper)">Email</a>
-</li>
-</ul>
-</div> 
-</div>
-</div>
-
-
-<div class="article_image" style="background-image: url('https://staticinstapaper.s3.amazonaws.com/images/insta_logo_med.png');">
-</div>
-
-</div>
-</article>
-
-
-
-</section>
-
-
-<div id="empty_notice" class="empty_notice ">
-No articles saved.
-</div>
-</div>
+	<div id="article_list" class="article_list expanded_view ">
+		<section class="articles" aria-label="Articles">
+			<article>
+			<aside class="article_selected_indicator" data-content="&#10003;" aria-hidden="true"></aside>
+			<a class="hidden" href="/a/" aria-hidden="false" aria-label="">
+			Article
+			</a>
+			<div class="article_inner_item" aria-hidden="true">
+				<div class="article_text_meta ">
+					<div class="js_title_row title_row" draggable="false">
+						<a class="article_title" href="/a/" title="">
+						Article
+						</a>
+					</div>
+					<div class="title_meta">
+						<span class="author">
+							&middot; by Tony J.
+						</span>
+					</div>
+					<div class="article_item_footer">
+						<div class="meta">
+							<aside class="meta_item starred_on">
+							<span class="ipicon ipicon-liked-on"></span>
+							</aside>
+						</div>
+					</div>
+				</div>
+			</div>
+			</article>
+		</section>
+	</div>
 
 
 
