--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>Instapaper</title>
+<title>blue</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="description" content="A simple tool for saving web pages to read later on your iPhone, iPad, Android, computer, or Kindle." />
 
@@ -30,43 +30,6 @@
 <body>
 
 <div id="page_header" class="page_header">
-
-<div class="container page_header_mobile hidden-lg hidden-md hidden-sm">
-<div class="row">
-
-
-<div class="col-xs-2">
-<nav class="js_mobile_menu_button mobile_menu_button">
-<i class="ipicon ipicon-hamburger"></i>
-</nav>
-</div>
-
-
-<div class="js_to_top col-xs-8 mobile_logo">
-
-
-<aside class="logo logo_mobile"><a href="/">blue</a></aside>
-
-
-</div>
-<div class="js_to_top col-xs-2 mobile_edit_toggle">
-
-<a class="js_mobile_edit_engage" href="#"><span data-normal-toggle="Edit" data-edit-toggle="Done"></span></a>
-
-</div>
-
-<div class="mobile_section_title js_to_top col-xs-8">
-
-
-</div>
-
-<div class="mobile_right_button col-xs-2">
-
-
-</div>
-</div>
-</div>
-
 <div class="container-fluid container_fluid_content page_header_desktop">
 <div class="row page_header_normal_row">
 <div class="col-lg-2 hidden-md hidden-sm hidden-xs"></div>
@@ -117,7 +80,7 @@
 <nav id="side_nav" class="side_nav touch_device_scroll_y" aria-label="Navigation">
 <div class="scroller_y">
 	<a id="unread_nav"
-		class="side_item active " href="/u">
+		class="side_item active " href="#">
 		<span class="ipicon ipicon-home"></span> Home
 	</a>
 	<a id="archive_nav" class="side_item  droptarget" href="/archive">
@@ -137,42 +100,12 @@
 </div>
 
 </nav>
-
-
-<div id="side_footer" class="side_footer" aria-hidden="true">
-<a href="/help">Help</a>
-<a href="http://blog.instapaper.com" target="_blank">Blog</a>
-<a href="javascript:void(0);"
-class="js_popover"
-data-target="#footer_help_menu"
-data-container="body"
-data-placement="top"
-data-bodystate="help_popover">
-More <span class="ipicon ipicon-triangle"></span>
-</a>
-<div id="footer_help_menu" class="popover_menu_wrapper">
-<div class="footer_help_popover popover_menu">
-<a class="menu_item" href="/apps">Apps</a>
-<a class="menu_item" href="/save">How to Save</a>
-<a class="menu_item" href="/premium">Premium</a>
-<a class="menu_item" href="/api">API</a>
-<a class="menu_item" href="/press">Press</a>
-<a class="menu_item" href="/publishers">Publishers</a>
-<a class="menu_item" href="/privacy">Privacy &amp; Terms</a>
-<div class="divider"></div>
-<a class="menu_item" href="http://twitter.com/instapaper" target="_blank">Twitter</a>
-<a class="menu_item" href="https://www.facebook.com/instapaperholdings" target="_blank">Facebook</a>
 </div>
 </div>
 </div>
 
-
-</div>
-</div>
-</div>
 <div id="main_container" class="container-fluid container_fluid_content main_container touch_device_scroll_y">
 <div class="row">
-<div class="col-lg-2 hidden-md hidden-sm hidden-xs"></div>
 
 <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12">
 <div id="main_content" class="main_content">
@@ -207,133 +140,14 @@ More <span class="ipicon ipicon-triangle"></span>
 			</article>
 		</section>
 	</div>
-
-
-
-
-
-
 </div>
 </div>
 
 </div>
 </div>
-
-<div id="bookmarklet_explain" class="bookmarklet_explain">&uarr; &nbsp; Click &amp; drag up to your Bookmarks Bar.</div>
-
-<!-- Modal Windows go here -->
-<div id="mobile_cover" class="mobile_cover"></div>
-<div id="modal_backer" class="modal_backer" class="modal_backer"></div>
-
-<div class="evernote_confirm">Successfully posted to Evernote</div>
-
-<div id="add_link_modal" class="modal modal_add_link">
-<div class="modal_name">Add a Link</div>
-<div class="modal_close">&#10005;</div>
-<div class="modal_group">
-<form method="POST" action="/edit" class="js_galog modal_form" data-bins="unread, add link">
-<input id="form_key" name="form_key" type="hidden" value="0S776tY1gScYc1H0IrZm" />
-<div class="form_line_inline">
-<input type="text" name="bookmark[url]" placeholder="www.example.com/article.html">
-<input type="submit" value="Add">
-</div>
-</form>
-</div>
-</div>
-
-<div id="bookmark_edit_modal" class="modal modal_bookmark_edit">
-<div class="modal_name">Edit Bookmark</div>
-<div class="modal_close">&#10005;</div>
-<div class="modal_group">
-<form method="POST" id="bookmark_edit_form" action="/edit" class="modal_form">
-<input id="form_key" name="form_key" type="hidden" value="0S776tY1gScYc1H0IrZm" />
-<div class="form_line_labeled">
-<label for="bookmark[title]">Title</label>
-<input id="bookmark_edit_title" autoselect="autoselect" type="text" name="bookmark[title]" value="" placeholder="Custom Title">
-</div>
-<div class="form_line_labeled">
-<label for="bookmark[url]">Link</label>
-<input id="bookmark_edit_url" type="text" name="bookmark[url]" value="" placeholder="www.example.com/article.html">
-</div>
-<div class="form_line_labeled">
-<label for="bookmark[selection]">Summary</label>
-<textarea id="bookmark_edit_selection" rows="5" name="bookmark[selection]" placeholder="Summary (optional)"></textarea>
-</div>
-<div class="form_line_submit">
-<button class="btn-instapaper" type="submit" value="1">Save Changes</button>
-</div>
-<input type="hidden" name="mode" value="unread"/>
-<input type="hidden" name="folder" value=""/>
-<input type="hidden" name="page" value="1"/>
-</form>
-</div>
-</div>
-
-<div id="folder_edit_modal" class="modal modal_folder_edit">
-<div class="modal_name">
-Edit Folder
-</div>
-<div class="modal_close">&#10005;</div>
-<div class="modal_group">
-<form method="POST" id="folder_edit_form" action="" class="modal_form">
-<input id="form_key" name="form_key" type="hidden" value="0S776tY1gScYc1H0IrZm" />
-<div class="form_line_labeled">
-<label for="folder[title]">Title</label>
-<input id="folder_edit_title" type="text" name="folder[title]" value="" placeholder="Folder Title (required)">
-</div>
-<div class="form_line_checkbox">
-<input type="checkbox" id="folder_sync_to_iphone" name="folder[sync_to_iphone]" value="1" aria-labelledby="keep_logged_in_create_label"/>
-<label id="folder_sync_to_iphone_label" for="folder_sync_to_iphone">Sync to mobile
-</label>
-<button class="btn-instapaper margin-top-5" type="submit">Save</button>
-</div>
-<div class="form_line_delete_folder">
-<a href="javascript:void(0);"
-class="js_folder_delete"
-data-folder-id=""
-id="folder_delete_link">Delete this folder</a>
-</div>
-</form>
-</div>
-</div>
-
-<div id="download_modal" class="modal modal_download">
-<div class="modal_name">Download</div>
-<div class="modal_close">&#10005;</div>
-<div class="modal_group clearfix">
-<a class="js_galog btn btn-default btn-instapaper download_format"
-href="/mobi"
-target="_blank"
-data-bins="unread, download, kindle">Kindle
-</a>
-<a class="js_galog btn btn-default btn-instapaper download_format"
-href="/epub"
-target="_blank"
-data-bins="unread, download, epub">ePub
-</a>
-<a class="js_galog btn btn-default btn-instapaper download_format"
-href="/make_printable"
-target="_blank"
-data-bins="unread, download, pdf">Printable
-</a>
-<a class="js_galog btn btn-default btn-instapaper download_format"
-href="/rss/5760583/KOiLnZoh7mDAjBXj9KwKNtWdKDE"
-target="_blank"
-data-bins="unread, download, rss">RSS Feed
-</a>
-</div>
-</div>
-
-
-
-
-
-
-
-
 
 <div id="scroll_indicator_wrapper" class="iScrollVerticalScrollbar scroll_indicator_wrapper">
-<div id="scroll_indicator" class="iScrollIndicator scroll_indicator"></div>
+	<div id="scroll_indicator" class="iScrollIndicator scroll_indicator"></div>
 </div>
 
 
